added toggle wifi/bluetooth func using keybinds & waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -322,10 +322,13 @@ bind = $mainMod, X, exec , $powermenu
 # bind = $mainMod ALT, H, exec , killall waybar; waybar
 
 bind = $mainMod, H, exec, killall waybar 2>/dev/null || waybar
-bind = $mainMod, I, exec, killall blueman-manager 2>/dev/null || blueman-manager
-bind = $mainMod, O, exec, killall nmrs 2>/dev/null || nmrs
-# bind = ALT, TAB, exec, $rofiswitch
 bind = $mainMod, TAB, workspace, previous
+
+bind = $mainMod, I, exec, killall blueman-manager 2>/dev/null || blueman-manager
+bind = $mainMod ALT, I, exec, ~/.config/hypr/scripts/toggle_bluetooth.sh
+bind = $mainMod, O, exec, killall nmrs 2>/dev/null || nmrs
+bind = $mainMod ALT, O, exec, ~/.config/hypr/scripts/toggle_wifi.sh
+# bind = ALT, TAB, exec, $rofiswitch
 
 binde = $mainMod SHIFT, right, resizeactive, 10 0
 binde = $mainMod SHIFT, left, resizeactive, -10 0
