--- a/.config/alacritty/colors.toml
+++ b/.config/alacritty/colors.toml
@@ -1,48 +1,48 @@
 [colors.primary]
-background = '#1a120e'
-foreground = '#f0dfd8'
+background = '#101418'
+foreground = '#e0e2e8'
  
 [colors.cursor]
-text = '#f0dfd8'
-cursor = '#d7c2b9' 
+text = '#e0e2e8'
+cursor = '#c2c7cf' 
  
 [colors.vi_mode_cursor]
-text = '#1a120e'
-cursor = '#ffb691' 
+text = '#101418'
+cursor = '#9dcbfb' 
  
 [colors.search.matches]
-foreground = '#52443d' 
-background = '#cfc890' 
+foreground = '#42474e' 
+background = '#d4bee6' 
  
 [colors.search.focused_match]
-foreground = '#52443d' 
-background = '#ffb691' 
+foreground = '#42474e' 
+background = '#9dcbfb' 
  
 [colors.footer_bar]
-foreground = '#52443d' 
-background = '#f0dfd8' 
+foreground = '#42474e' 
+background = '#e0e2e8' 
  
 [colors.hints.start]
-foreground = '#52443d' 
-background = '#e6beac' 
+foreground = '#42474e' 
+background = '#b9c8da' 
  
 [colors.hints.end]
-foreground = '#52443d' 
-background = '#e6beac' 
+foreground = '#42474e' 
+background = '#b9c8da' 
  
 [colors.selection]
-text = '#1a120e'
-background = '#ffb691'
+text = '#101418'
+background = '#9dcbfb'
  
  
 [colors.normal]
 black = '#181818' 
 red = '#ffb4ab' 
-green = '#ffb691' 
-yellow = '#8d4e2b' 
-blue = '#ffb691' 
-magenta = '#cfc890' 
-cyan = '#e6beac' 
+green = '#9dcbfb' 
+yellow = '#31628d' 
+blue = '#9dcbfb' 
+magenta = '#d4bee6' 
+cyan = '#b9c8da' 
 white = '#BAC2DE' 
  
  
