--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -68,6 +68,7 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = QT_QPA_PLATFORMTHEME,qt6ct
 
 #####################
 ### LOOK AND FEEL ###
@@ -124,7 +125,7 @@ decoration {
 }
 
 cursor {
-    no_hardware_cursors = 2
+    no_hardware_cursors = 1
 }
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 # animations {
